# dqpose

./: CMakeLists.txt  README.md  dqposeConfig.cmake.in
documents/: Pose.html  classes.html  searchbar.html  styles.css
examples/: CMakeLists.txt  dualquat_example.cpp  example1.cpp  example_dualquat.cpp  example_pose.cpp  example_quat.cpp  example_time.cpp
include/: CMakeLists.txt  dqpose.hpp
include/dqpose/: dualquat.hpp  pose.hpp  quat.hpp
src/: CMakeLists.txt  dqpose.hpp
src/dqpose/: dualquat.hpp  pose.hpp  quat.hpp
tests/: CMakeLists.txt  test1.cpp
